--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,107 @@
-.App {
+body {
+  font-family: Arial, Helvetica, sans-serif;
+
+
+}
+
+* {
+  box-sizing: border-box;
+}
+
+
+ .container {
+  
+  border-radius: 9px;
+  background-color: #a4a4a5;
+  padding: 20px 0 30px 0;
+ border-radius: 9px;
+  border: 0px solid #f1f1f1;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  width: 80%;
+  padding: 20px;
   text-align: center;
+} 
+.sofkabook_title{
+color: rgb(255, 255, 255);
+font-weight: bold;
+margin: 2%;
+}
+input,
+.btn {
+  width: 30%;
+  padding: 12px;
+  border: none;
+  border-radius: 4px;
+  margin: 5px 2px;
+
+  display: inline-block;
+  font-size: 17px;
+  line-height: 20px;
+  text-decoration: none; 
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+input:hover,
+.btn:hover {
+  opacity: 1;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+input[type=submit] {
+
+  background-color: #ffffff;
+  color: #242222;
+  cursor: pointer;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+input[type=submit]:hover {
+  background-color: #ccd3f8;
 }
 
-.App-link {
-  color: #61dafb;
+.navPrincipal{
+  background-color:#10137B;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card{width: 500px;
+  
+  margin: 0 auto; /* Added */
+  float: none; /* Added */
+  margin-top: 40px; /* Added */
+  background-color: #dadada;
+  text-align: center;
+  border: #a4a4a5;
+}
+
+.desafioContigo{
+  color: rgb(255, 94, 0);
+}
+
+.btnGoogle{
+  margin: 0 auto; /* Added */
+  float: none; /* Added */
+  text-align: center;
+  margin-bottom: 18px; /* Added */
+}
+
+.photoProfile{
+  width:50px;
+   height:50px;
+   border-radius:50px;
+}
+
+.namePerson{
+  color: #fff;
+  font-size: 15px;
+  padding-top: 0px;
+}
+
+.btnSignOut {
+  width: 150px;
+  font-size: 1em;
+  position: fixed;
+  right:6px;
+  bottom:5px;
+  background-color:#10137B;
 }
