--- a/src/App.css
+++ b/src/App.css
@@ -105,3 +105,7 @@ input[type=submit]:hover {
   bottom:5px;
   background-color:#10137B;
 }
+
+.cardsPosts{
+  width: 28rem; border: 1px solid #10147ba1;
+}
