--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,6 @@ body {
   background-color: #a4a4a5;
   padding: 20px 0 30px 0;
  border-radius: 9px;
-  border: 0px solid #f1f1f1;
   position: fixed;
   top: 50%;
   left: 50%;
@@ -61,7 +60,7 @@ input[type=submit]:hover {
 }
 
 .navPrincipal{
-  background-color:#10137B;
+  background-color:#050A30;
 }
 
 .card{width: 500px;
@@ -71,7 +70,7 @@ input[type=submit]:hover {
   margin-top: 40px; /* Added */
   background-color: #dadada;
   text-align: center;
-  border: #a4a4a5;
+  
 }
 
 .desafioContigo{
@@ -86,16 +85,13 @@ input[type=submit]:hover {
 }
 
 .photoProfile{
-  width:50px;
+   width:50px;
    height:50px;
    border-radius:50px;
+   margin-right: 15px;
 }
 
-.namePerson{
-  color: #fff;
-  font-size: 15px;
-  padding-top: 0px;
-}
+
 
 .btnSignOut {
   width: 150px;
@@ -107,9 +103,24 @@ input[type=submit]:hover {
 }
 
 .cardsPosts{
-  width: 28rem; border: 1px solid #10147ba1;
+  width: 28rem; 
+}
+.buttons{
+  padding: 0 0 0 0 ;
+  width: 90px;
+  font-size: 15px;
 }
 
 .btn-exit{
   width:50px;
+}
+
+.name{
+  margin-right: 14px;
+  background-color: rgb(32, 32, 32);
+  color: rgb(255, 255, 255);
+}
+
+.title-home-post{
+  padding-top: 10px;
 }
